Fixing disqus ids.

--- a/_posts/2016-09-12-about.markdown
+++ b/_posts/2016-09-12-about.markdown
@@ -3,6 +3,7 @@ layout: post
 title: About
 date: '2016-09-12 03:57:00'
 permalink: about
+disqus_id: ghost-2
 ---
 
 > The first principle is that you must not fool yourself and you are the easiest person to fool. 
